go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server
  labels:
    run: go-server
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: go-server
