ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: virtual-host-ingress
spec:
  rules:
  - host: test1.k8s.ivanlook.ru
    http:
      paths:
      - backend:
          serviceName: my-nginx
          servicePort: 80
  - host: test2.k8s.ivanlook.ru
    http:
      paths:
      - backend:
          serviceName: go-server
          servicePort: 80
